# teletools

./: README.md  README.pypi.md  pyproject.toml
docs/: abr_loader.md  cdr_stage.md  cipher_api_index.md  cipher_cli.md  database.md  database_api_index.md  preprocessing_api_index.md  utils_api_index.md
docs/cipher_api/: decrypt_file_or_folder.md  encrypt_file_or_folder.md
docs/database_api/: query_numbers_carriers.md
docs/preprocessing_api/: normalize_number.md  normalize_number_pair.md
docs/utils_api/: inspect_file.md  setup_logger.md
pgdatabase/: README.md
pgdatabase/sql/: create_schemas.sql
src/teletools/: __init__.py  cipher.py  cli.py  run_cipher.py  utils.py
src/teletools/cipher/: __main__.py  _file_cipher.py  cipher_cli.py
src/teletools/database/: __init__.py  _abr_database.py  _abr_numeracao.py  _abr_numeracao_sql_queries.py  _abr_portabilidade.py  _abr_portabilidade_sql_queries.py  _abr_prestadoras.py  _database_config.py  _sql_queries.py  abr_database.py  abr_database_cli.py  abr_loader.py  database.md
src/teletools/preprocessing/: _number_format.py
tools/cdrstage/: README.md
tools/pgdatabase/: README.md
tools/scripts/: criar_sessao.sh
